<resources>
    <string name="app_name">Aleph</string>

    <!-- SearchFragment -->
    <string name="title_search">Hledat</string>
    <string name="title_activity_detail">Hledat</string>
    <string name="title_activity_availability">Dostupnost</string>
    <string name="search_hint">autor, titul, téma, atd...</string>
    <string name="detailImage">detailImage</string>
    <string name="menuFavoriteAdd">Oblíbené</string>
    <string name="menuSendByMail">Odeslat</string>
    <string name="add_query_to_favorite">Dotaz přidán do oblíbených.</string>
    <string name="add_query_to_favorite_false">Tento dotaz se již nachází v oblíbených.</string>
    <string name="detail_list_remove">Odstranit</string>
    <string name="no_search_result">Nebyly nalezeny žádné výsledky.</string>

    <!-- SearchFragment DetailActivity -->
    <string name="availibility_check">Zkontrolovat dostupnost</string>
    <string name="next_services">Další služby</string>
    <string name="titul">Titul</string>
    <string name="author">Autor</string>
    <string name="nakladatel_udaje">Naklad. údaje</string>
    <string name="vydani">Vydání</string>
    <string name="fyzicky_popis">Fyzický popis</string>
    <string name="poznamky">Poznámky</string>
    <string name="predmet">Předmět</string>
    <string name="isbn">ISBN</string>
    <string name="jazyk">Jazyk</string>
    <string name="add_record_to_favorite">Záznam přidán do oblíbených.</string>
    <string name="add_record_to_favorite_false">Tento záznam se již nachází v oblíbených.</string>
    <string name="delete_favorite">Odstranit</string>
    <string name="email_share_email_subject">Záznam z Oborová brána TECH</string>
    <string name="email_share_content">se s Vámi chce podělit o tento záznam.</string>
    <string name="detail_no_isbn">U zvoleného dokumentu není k dispozici ISBN.</string>


    <!-- SearchFragment AvailabilityActivity -->
    <string name="makeReservationDialog">Opravdu chcete vytvořit rezervaci?</string>
    <string name="reservationDialogTitle">Rezervace: </string>
    <string name="progressDialogTitle">Prosím vydržte...</string>
    <string name="progressDialogContent">Probíhá rezervace...</string>
    <string name="alert_dialog_not_login">Nemáte nastavené přihlašovací údaje.</string>
    <string name="alert_dialog_set">Nastavit</string>
    <string name="title_availability">Dostupnost</string>
    <string name="availability_reservation_created">Vaše rezervace byla vytvořena.</string>
    <string name="availability_reservation_not_created">Rezervaci není možné provést.</string>
    <string name="availability_warning">Upozornění</string>
    <string name="warning_setting_dialog">Nejdříve nastavte platné přihlašovací údaje.</string>
    <string name="no_availability_find">Kniha není dostupná.</string>

    <string name="title_dostupnost">Dostupnost</string>
    <string name="title_activity_borrow">Výpůjčky</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_rezervation">RezervationActivity</string>
    <string name="check_availability">Zkontrolovat dostupnost</string>
    <string name="title_activity_base">BaseActivity</string>



    <string name="title_information">Informace</string>


    <!-- Sync Preferences -->
    <string name="reader_header">Čtenář</string>
    <string name="fulname_title">Jméno a příjmení</string>
    <string name="e_mail_title">E-mail</string>
    <string name="library_header">Knihovna</string>
    <string name="url_title">Aleph server URL</string>
    <string name="username_title">Přihlašovací jméno</string>
    <string name="password_title">Heslo</string>


    <string name="desc_list_item_icon">Item Icon</string>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_nav_search</item>
        <item>@drawable/ic_nav_account</item>
        <item>@drawable/ic_nav_favorite</item>
        <item>@drawable/ic_nav_info</item>
        <item>@drawable/ic_nav_settings</item>
    </array>

    <string-array name="nav_drawer_items">
        <item>Hledat</item>
        <item>Účet</item>
        <item>Oblíbené</item>
        <item>Informace</item>
        <item>Nastavení</item>
    </string-array>


    <!-- Content Description -->
    <string name="positiveAnswer">Ano</string>
    <string name="negativeAnswer">Ne</string>
    <string name="checkAnswer">Ok</string>
    <string name="cancelAnswer">Zrušit</string>


    <!-- ReservationActivity -->
    <string name="title_activity_reservation">Rezervace</string>
    <string name="reservation_no_reservation_found">Nebyly nalezeny žádné rezervace.</string>
    <string name="reservation_cancel">Zrušení rezervace</string>
    <string name="reservation_cancel_question">Opravdu chcete rezervaci zrušit?</string>
    <string name="reservation_canceled">Rezervace byla zrušena.</string>
    <string name="reservation_not_canceled">Rezervaci nelze zrušit.</string>
    <string name="reservation_progress_dialog_title">Prosím vydržte...</string>
    <string name="reservation_progress_dialog_content">Probíhá rušení rezervace ...</string>

    <!-- AccountFragment -->
    <string name="title_account">Účet</string>
    <string name="account_no_reservation">žádné rezervace</string>
    <string name="account_no_borrow">žádné výpůjčky</string>
    <string name="action_vypujcky">Výpujčky</string>
    <string name="title_vypujcky">VÝPŮJČKY</string>
    <string name="action_rezervace">Rezervace</string>
    <string name="title_info_o_ctenari">INFORMACE O ČTENÁŘI</string>
    <string name="member_time_out">Členství vyprší</string>

    <!-- FavoriteFragment, fragment_favorite -->
    <string name="title_favorite">Oblíbené</string>
    <string name="action_record">Záznamy</string>
    <string name="title_record">ZÁZNAMY</string>
    <string name="action_query">Dotazy</string>
    <string name="title_query">DOTAZY</string>


    <!-- SettingsFragment -->
    <string name="button_delete">Smazat nastavení</string>
    <string name="title_settings">Nastavení</string>
    <string name="action_settings_save">Uložit</string>
    <string name="f_settings_reader">ČTENÁŘ</string>
    <string name="f_settings_fullname">Plné jméno</string>
    <string name="f_settings_fullname_hint">Jan Novák</string>
    <string name="f_settings_email">E-mail</string>
    <string name="f_settings_email_hint">uzivatel@domena.cz</string>
    <string name="f_settings_login">Login</string>
    <string name="f_settings_login_hint">Čtenář</string>
    <string name="f_settings_password">Heslo</string>
    <string name="f_settings_password_hint">Povinné</string>
    <string name="dialog_bad_login">Chyba přihlašování</string>
    <string name="dialog_check_login_pass">Zkontrolujte login a heslo.</string>


    <!-- TODO zjistit jestli je to k necemu potreba -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="base_bit">BaseBIB</string>
    <string name="base_adm">BaseADM</string>
    <string name="search_button_description">Search button description</string>

</resources>