<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@android:drawable/star_off"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_information" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings" />
</menu>