<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grayBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/title_vypujcky" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/borrowLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/action_vypujcky" />

        <TextView
            android:id="@+id/countBorrow"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBorrowCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrow_right"
            android:contentDescription="arrow right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reservationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/action_rezervace" />

        <TextView
            android:id="@+id/countReservation"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressReservationCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrow_right"
            android:contentDescription="arrow right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/title_info_o_ctenari" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accountInfoReader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/member_time_out"/>

        <TextView
            android:id="@+id/memberDate"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressMemberDate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>

